feniceincludedir =	$(includedir)/fenice

noinst_HEADERS	=	bufferpool.h \
			command_environment.h \
			debug.h
			evenloop.h \
			fnc_log.h \
			gsm.h \
			h26l.h \
			intnet.h \
			md5global.h \
			md5.h \
			mediainfo.h \
			mp3.h \
			mpeg4es.h \
			mpeg.h \
			mpeg_system.h \
			mpeg_ts.h \
			multicast.h \
			pcm.h \
			prefs.h \
			rtcp.h \
			rtp_shm.h \
			rtp.h \
			rtpptdefs.h \
			rtsp.h \
			schedule.h \
			sdp.h \
			socket.h \
			types.h \
			utils.h \
			xmllexer.h \
			xmlparser.h 

INCLUDES = $(top_srcdir)
